# maelstrom-node

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  test_main.py
.forgejo/workflows/: test.yml
src/: main.py
tests/: test_main.py
