[project]
name = "maelstrom-node"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "pyrefly>=0.60.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
strict = true

[tool.pyrefly]
preset = "strict"

